Improve password security with new aproach using salt and CBC